tests/ui_fail/free_desc.stderr
error[E0505]: cannot move out of `conn` because it is borrowed
  --> tests/ui_fail/free_desc.rs:33:5
   |
28 |     let conn = connect_to_test_db(&env);
   |         ---- binding `conn` declared here
29 |
30 |     let (desc, _) = SQLHDESC::SQLAllocHandle(&conn);
   |                                              ----- borrow of `conn` occurs here
...
33 |     conn.SQLDisconnect();
   |     ^^^^ move out of `conn` occurs here
34 |     desc.SQLFreeHandle();
   |     ---- borrow later used here
